Bug 131143 - FILESAVE DOCX: X-Y (Scatter) chart is missing
Summary: FILESAVE DOCX: X-Y (Scatter) chart is missing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
5.3 all versions
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:7.0.0
Keywords: filter:docx
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2020-03-05 09:02 UTC by NISZ LibreOffice Team
Modified: 2020-03-09 12:29 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (8.43 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-03-05 09:03 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem in Writer (60.19 KB, image/png)
2020-03-05 09:03 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-03-05 09:02:44 UTC
Description:
 FILE SAVE DOCX: X-Y (Scatter) chart is missing.

Steps to Reproduce:
    1. Create a default X-Y (Scatter) chart in LibreOffice Writer. 
    2. Save the file as *.docx
    3. Reload or reopen the file.


Actual Results:
The data points of scatter chart is missing from the chart. 


Expected Results:
The data points of scatter chart should be visible .


Reproducible: Always


User Profile Reset: No



Additional Info:
Verzió: 6.3.4.2.0+ (x64)
Build az.: 7a004aed51c04b7575097388ae2246c98df2c9e6
CPU szálak: 4; OS: Windows 10.0; Felületmegjelenítés: GL; VCL: win; 
Területi beállítások: hu-HU (hu_HU); Felület nyelve: hu-HU
Calc: 

See also: 
Verzió: 5.4.0.3
Build az.: 92c2794a7c181ba4c1c5053618179937228ed1fb
CPU szálak: 4; OS: Windows 6.2; Felületmegjelenítés: alapértelmezett; 
Területi beállítások: hu-HU (hu_HU); Calc: CL
Comment 1 NISZ LibreOffice Team 2020-03-05 09:03:18 UTC
Created attachment 158400 [details]
Example file from Writer
Comment 2 NISZ LibreOffice Team 2020-03-05 09:03:37 UTC
Created attachment 158401 [details]
Screenshot of the problem in Writer
Comment 3 Balázs Varga 2020-03-05 10:07:54 UTC
Confirmed in:

Version: 5.4.0.3
Build.: 92c2794a7c181ba4c1c5053618179937228ed1fb
Comment 4 Xisco Faulí 2020-03-05 10:38:01 UTC
Also reproduced in

Version: 5.3.0.0.alpha0+
Build ID: fb790880eb11552b2e7d1dcf6c09d2663712290f
CPU Threads: 4; OS Version: Linux 4.19; UI Render: default; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 5 Julien Nabet 2020-03-05 14:51:23 UTC
On Win10 with master sources updated today, I could reproduce this.

The pb seems when importing docx.
Indeed, the docx attached is ok on Word 365.
Also, I created a brand new odt file with master sources, chart appears.
Exporting on docx and opening it on Word 365, chart appears too.
Opening the docx on LO with master sources, only grid of the chart appears.
Comment 6 Commit Notification 2020-03-09 10:38:13 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/45413702b0b71ee56aee57d215b4041d3ea6067b

tdf#131143 OOXML chart: fix missing data points of scatter chart

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.