tdf#131143 OOXML Export: Fix missing of scatter chart

Export category labels in c:xVal/c:strRef/c:strCache/c:pt/c:v,
if we do not have any value in "values-x" property, so the
X-Y (scatter) chart will not be disappeared.

Change-Id: Ib5ed99bd1186bd1cfa3e2559aff1c8d214547017